@@ -261,6 +261,7 @@ changes to languages because of Bugzilla reports.
   processing continues. To abort the hook, a hook function must return an
   explicit, boolean false or a string error message. Other falsey values are
   tantamount to a 'return true' in earlier versions of MediaWiki.
+* The mediawiki.ui CSS module is now included on all pages.
 
 == Compatibility ==
 
